--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                         <button type="submit" class="join-btn">Get Early Access</button>
                     </form>
                     <div class="success-message" id="successMessage">
-                        🎉 Welcome to the future! Check your email for next steps.
+                        🎉 Welcome to the future! Our representative will contact your shortly for next steps.
                     </div>
                 </div>
             </section>
